# DZEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  vcpkg.json
Code/: CMakeLists.txt
Code/App/: CMakeLists.txt
Code/App/Include/DZEngine/: App.h
Code/App/Source/: App.cpp
Code/Common/: CMakeLists.txt
Code/Common/Include/DZEngine/: AppContext.h  GraphicsContext.h
Code/Common/Source/: GraphicsContext.cpp
Code/Editor/: CMakeLists.txt
Code/Editor/ImGui/: ImGuiBackend.cpp  ImGuiBackend.h
Code/Editor/Include/DZEngine/: Editor.h  EditorGameRunner.h
Code/Editor/Include/DZEngine/Components/: AssetBrowser.h  AssetTile.h  SceneViewRenderer.h  WorldEditorView.h
Code/Editor/Include/DZEngine/Scene/: SceneSerializer.h
Code/Editor/Include/DZEngine/Style/: EditorStyle.h  ImGuiFonts.h
Code/Editor/Include/DZEngine/Systems/: SceneViewCameraSystem.h
Code/Editor/Source/: Editor.cpp  EditorGameRunner.cpp
Code/Editor/Source/Components/: AssetBrowser.cpp  AssetTile.cpp  SceneViewRenderer.cpp  WorldEditorView.cpp
Code/Editor/Source/Fonts/: FontAwesome.cpp  JetbrainsMonoImGui.cpp
Code/Editor/Source/Scene/: SceneSerializer.cpp
Code/Editor/Source/Style/: EditorStyle.cpp  ImGuiFonts.cpp
Code/Editor/Source/Systems/: SceneViewCameraSystem.cpp
Code/Runtime/: CMakeLists.txt
Code/Runtime/Include/DZEngine/: AGameRunner.h  AppContext.h  AssetHandle.h  DummyGame.h  GameRunner.h  IGame.h  IGameRunner.h
Code/Runtime/Include/DZEngine/Assets/: AnimationAssetData.h  AnimationBatch.h  AssetBatcher.h  AssetBundle.h  AssetRegistry.h  MaterialBatch.h  MeshAssetData.h  MeshBatch.h  MeshPool.h  SceneAssets.h  SkeletonAssetData.h  SkeletonBatch.h  StaticMeshVertex.h
Code/Runtime/Include/DZEngine/Components/: AssetHandle.h  CameraComponent.h  CameraControllerComponent.h  InputStateComponent.h  SceneComponent.h  TransformComponent.h
Code/Runtime/Include/DZEngine/Components/Graphics/: AnimationComponent.h  LODComponent.h  MaterialComponent.h  MeshComponent.h  RenderableComponent.h  SkeletonComponent.h
Code/Runtime/Include/DZEngine/Input/: InputSystem.h
Code/Runtime/Include/DZEngine/Math/: Math.h  MathConverter.h
Code/Runtime/Include/DZEngine/Rendering/: GraphicsContext.h  IRenderer.h  RenderLoop.h
Code/Runtime/Include/DZEngine/Rendering/GPUDriven/: GPUDrivenBinding.h  GPUDrivenDataUpload.h  GPUDrivenRenderer.h  GPUDrivenRootSig.h  GPUDrivenSceneData.h
Code/Runtime/Include/DZEngine/Scene/: ComponentSerialization.h  Scene.h  SceneLoader.h  World.h
Code/Runtime/Include/DZEngine/Utilities/: DataUtilities.h  MathConverter.h
Code/Runtime/Source/: AGameRunner.cpp  DummyGame.cpp  GameRunner.cpp
Code/Runtime/Source/Assets/: AnimationAssetData.cpp  AnimationBatch.cpp  AssetBatcher.cpp  AssetBundle.cpp  AssetRegistry.cpp  MaterialBatch.cpp  MeshAssetData.cpp  MeshBatch.cpp  MeshPool.cpp  SceneAssets.cpp  SkeletonAssetData.cpp  SkeletonBatch.cpp
Code/Runtime/Source/Input/: InputSystem.cpp
Code/Runtime/Source/Math/: MathConverter.cpp
Code/Runtime/Source/Rendering/: RenderLoop.cpp
Code/Runtime/Source/Rendering/GPUDriven/: GPUDrivenBinding.cpp  GPUDrivenDataUpload.cpp  GPUDrivenRenderer.cpp  GPUDrivenRootSig.cpp
Code/Runtime/Source/Scene/: ComponentSerialization.cpp  Scene.cpp  SceneLoader.cpp  World.cpp
Code/Runtime/Source/Utilities/: DataUtilities.cpp  MathConverter.cpp
Editor/: CMakeLists.txt
Editor/Include/: Editor.h
NewGameTemplate/: CMakeLists.txt
_Assets/Engine/Shaders/GPUDriven/: GPUDrivenRootSignature.hlsli  UberShader.ps.hlsl  UberShader.vs.hlsl
_ThirdParty/DenOfIzGraphics/linux/: update.sh
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Animation/: AnimationStateManager.h  OzzAnimation.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Assets/: Assets.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Assets/Font/: TextBatch.h  TextLayoutCache.h  TextRenderer.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Input/: InputSystem.h  Window.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Support/: FrameSync.h  GPUBufferView.h  ResourceTracking.h  RingBuffer.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/UI/: Clay.h  ClayData.h  UIMeasurements.h
_ThirdParty/DenOfIzGraphics/linux/include/DenOfIzGraphics/Utilities/: Common_Arrays.h  InteropMath.h
_ThirdParty/DenOfIzGraphics/linux/lib/cmake/DenOfIzGraphics/: DenOfIzGraphicsConfig.cmake  DenOfIzGraphicsTargets-release.cmake  DenOfIzGraphicsTargets.cmake
_ThirdParty/DenOfIzGraphics/osx/: update.sh
_ThirdParty/DenOfIzGraphics/osx/include/DenOfIzGraphics/Backends/: GraphicsApi.h
_ThirdParty/DenOfIzGraphics/osx/include/DenOfIzGraphics/Input/: Display.h  InputData.h
_ThirdParty/DenOfIzGraphics/osx/include/DenOfIzGraphics/Support/: AsyncGpuUpload.h
_ThirdParty/DenOfIzGraphics/osx/include/DenOfIzGraphics/UI/: IClayContext.h  ImGuiBackend.h
_ThirdParty/DenOfIzGraphics/osx/include/DenOfIzGraphics/Utilities/: Common.h  DZArena.h  Engine.h  FrameDebugRenderer.h  InteropMath.h  OS.h
_ThirdParty/DenOfIzGraphics/osx/lib/cmake/DenOfIzGraphics/: DenOfIzGraphicsConfig.cmake  DenOfIzGraphicsTargets-release.cmake  DenOfIzGraphicsTargets.cmake  DenOfIzGraphicsUtils.cmake
_ThirdParty/DenOfIzGraphics/win32/: update.bat
_ThirdParty/DenOfIzGraphics/win32/include/DenOfIzGraphics/: DenOfIzGraphics.h
_ThirdParty/DenOfIzGraphics/win32/include/DenOfIzGraphics/Animation/: AnimationStateManager.h
_ThirdParty/DenOfIzGraphics/win32/include/DenOfIzGraphics/Input/: Event.h
_ThirdParty/DenOfIzGraphics/win32/include/DenOfIzGraphics/UI/: ClayData.h  ImGuiBackend.h
_ThirdParty/DenOfIzGraphics/win32/include/DenOfIzGraphics/Utilities/: Common_Apple.h  Common_Macro.h  FrameDebugRenderer.h  InteropMath.h
_ThirdParty/DenOfIzGraphics/win32/lib/: DenOfIzGraphics.lib
_ThirdParty/DenOfIzGraphics/win32/lib/cmake/DenOfIzGraphics/: DenOfIzGraphicsConfig.cmake  DenOfIzGraphicsTargets-debug.cmake  DenOfIzGraphicsTargets.cmake  DenOfIzGraphicsUtils.cmake  dpi_aware.manifest
cmake/: assets.cmake
(+63 files in other folders)
